<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eduwords</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="exit_ask">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="about_title">EduWords</string>
    <string name="about_text">More informations on website eduwords.project-midas.com</string>
    <string name="exit_confirm">Press back again to close this app</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="button_download">Download</string>
    <string name="hint_word">word</string>
    <string name="hint_translate">translate</string>
    <string name="hint_tag">tag</string>
    <string name="button_add_word">Add</string>
    <string name="button_start">Start</string>
    <string name="edit_quiz_answer">write answer</string>
    <string name="button_check">check</string>

</resources>
